chaning php message

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Hello cloud9 & github</title>
+    </head>
+    <body>
+        you are here!
+    </body>
+</html>
