--- a/examples/hw1/history.html
+++ b/examples/hw1/history.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8" />
         <title>Women in Compuer Science</title>
         <link href="css/styles.css" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display|Roboto" rel="stylesheet">    </head>
+        <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display%7CRoboto" rel="stylesheet">    </head>
     <body>
         <nav>
             <a href="index.html">Home</a>
-            <a href="history.html">History</a>
+            <a class="active" href="history.html">History</a>
             <a href="statistics.html">Gender Gap</a>
             <a href="figures.html">Pioneers</a>
-             <hr width="50%" />
+             <hr />
         </nav>
         <br />
         <div id="content">
-             <figure id="timeline">
-                <img src="img/timeline.jpg" alt="Women in Computing Time Line">
-            </figure>
+            <h2>Significant Events and Years</h2>
+            <figure id="timeline">
+                <iframe src="img/timeline.jpg"></iframe>
+                <iframe src="img/timeline2.jpg"></iframe>
+            </figure>    
             <div id=reference>
+                <p>You can find the link to references:</p>
                 <a href="https://anitab.org/news/announcements/abi-releases-info-graphic-on-important-women-in-computing/">Click Here</a>
             </div>
         </div>
