--- a/examples/hw1/figures.html
+++ b/examples/hw1/figures.html
@@ -1,62 +1,73 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8" />
         <title>Women in Compuer Science</title>
         <link href="css/styles.css" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display|Roboto" rel="stylesheet">    </head>
+        <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display%7CRoboto" rel="stylesheet">    </head>
     <body>
         <nav>
             <a href="index.html">Home</a>
             <a href="history.html">History</a>
             <a href="statistics.html">Gender Gap</a>
-            <a href="figures.html">Pioneers</a>
-             <hr width="50%" />
+            <a class="active" href="figures.html">Pioneers</a>
+             <hr />
         </nav>
         <br />
         <div id="content">
-            <div id="figure1">
-                <figure id="ada_lovelace">
-                    <img src="img/ada_lovelace.jpg" alt="Picture of Ada Lovelace" />
-                </figure>
-                <span>
-                    Born: 1815 ~ 1852
-                    Ada Lovelace was the first computer programmer.
-                    She also published the first algorithm carried out by Charles Babbage's proposed mechanical general-purpose computer, the Analytical Engine 
-                </span>
+            <h2>Women Pioneers in Computer Science</h2>
+            <div id="content-figures">
+                <div id="figure">
+                    <figure id="ada_lovelace">
+                        <img src="img/ada_lovelace.jpg" alt="Picture of Ada Lovelace" />
+                    </figure>
+                    <div>
+                        Born: 1815 ~ 1852
+                        <article>
+                            <a href="https://en.wikipedia.org/wiki/Ada_Lovelace">Ada Lovelace</a> was the first computer programmer.
+                            She also published the first algorithm carried out by Charles Babbage's proposed mechanical general-purpose computer, the Analytical Engine 
+                        </article>
+                    </div>
+                </div>
+                <div id="figure">
+                    <figure id="grace_hopper">
+                        <img src="img/grace_hopper.jpg" alt="Picture of Ada Lovelace" />
+                    </figure>
+                    <div>
+                        Born: 1906 ~ 1992
+                        <article>
+                            <a href="https://en.wikipedia.org/wiki/Grace_Hopper">Grace Brewster Murray Hopper</a> is one of the first programmers of the Harvard Mark I computer.
+                            She invented one of the first compiler related tools and machine-independent programming languages (early high-level programming language still in today's). 
+                        </article>
+                    </div>
+                </div>
+                <div id="figure">
+                    <figure id="anita_borg">
+                        <img src="img/anita_borg.jpg" alt="Picture of Anita Borg" />
+                    </figure>
+                    <div>
+                        Born: 1949 ~ 2003
+                        <article>
+                            <a href="https://en.wikipedia.org/wiki/Anita_Borg">Anita Borg</a> founded the Institute for Women and Technology and the Grace Hopper Celebration of Women in Computing. 
+                            Her goal was to have 50% representation for women in computing by 2020.
+                        </article>
+                    </div>
+                </div>
+                <div id="figure">
+                    <figure id="margaret_hamilton">
+                        <img src="img/margaret_hamilton.jpg" alt="Picture of Margaret Hamilton" />
+                    </figure>
+                    <div>
+                        Born: 1936 ~ Present
+                        <article>
+                            <a href="https://en.wikipedia.org/wiki/Margaret_Hamilton_(scientist)">Margaret Heafield Hamilton</a> was a director of the Software Engineering Division of the MIT.
+                            She developed on-board flight software for the Apollo space program.
+                            She inveted the term of <strong>"Software Engineering"</strong>.
+                        </article>
+                    </div>
+                </div>
             </div>
-            <div id="figure2">
-                <figure id="grace_hopper">
-                    <img src="img/grace_hopper.jpg" alt="Picture of Ada Lovelace" />
-                </figure>
-                <span>
-                    Born: 1906 ~ 1992
-                    Grace Brewster Murray Hopper is one of the first programmers of the Harvard Mark I computer.
-                    She invented one of the first compiler related tools and machine-independent programming languages (early high-level programming language still in today's). 
-                </span>
-            </div>
-            <div id="figure3">
-                <figure id="anita_borg">
-                    <img src="img/anita_borg.jpg" alt="Picture of Anita Borg" />
-                </figure>
-                <span>
-                    Born: 1949 ~ 2003
-                    Anita Borg founded the Institute for Women and Technology and the Grace Hopper Celebration of Women in Computing. 
-                    Her goal was to have 50% representation for women in computing by 2020.
-                </span>
-            </div>
-            <div id="figure4">
-                <figure id="margaret_hamilton">
-                    <img src="img/margaret_hamilton.jpg" alt="Picture of Margaret Hamilton" />
-                </figure>
-                <span>
-                    Born: 1936 ~ Present
-                    Margaret Heafield Hamilton was a director of the Software Engineering Division of the MIT Instrumentation Laboratory,
-                    which developed on-board flight software for the Apollo space program.
-                    She inveted the term of <strong>"Software Engineering"</strong>.
-                </span>
-            </div>
-        </div>
+        </div>    
         <footer>
             <hr>
             <figure id="csumb_logo">
