--- a/examples/hw1/index.html
+++ b/examples/hw1/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8" />
         <title>Women in Compuer Science</title>
         <link href="css/styles.css" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display|Roboto" rel="stylesheet">    </head>
+        <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display%7CRoboto" rel="stylesheet">    </head>
     <body>
         <nav>
-            <a href="index.html">Home</a>
+            <a class="active" href="index.html">Home</a>
             <a href="history.html">History</a>
             <a href="statistics.html">Gender Gap</a>
             <a href="figures.html">Pioneers</a>
-             <hr width="50%" />
+             <hr />
         </nav>
         <br />
         <header>
-            <h1>Women<h1><h2>in</h2><h1>Computer Science</h1>
+            <h1>Women</h1><h2>in</h2><h1>Computer Science</h1>
         </header>
         <br /> <br />
         <main>
-            <div id="welcomeText"> Hello! <br /> 
+            <div id="welcomeText"><br /> 
                 <p>Since 18th century, women were the first pioneers who developed scientific computations.</p>
                 <p><strong>Women in computing</strong> have shaped the evolution of information technology.</p>
-                <p>I am a Software Engineer student who aspired to achieve </p>
+                <p>As a Software Engineer student, I would like to achieve better understanding of being a female in tech.</p>
                 <p>This website is devoted to promote <strong>Women in Computer Science</strong> readdress the gender disparity in the industry!</p>
                 <br /><br />
             </div>  
@@ -34,6 +34,8 @@
             </div>
             <div id="welcomImg">
                 <img src="img/laptop.jpg" alt="My laptop image" width="450" height="300"/>
+                <br />
+                <em>This is my laptop with Grace Hopper Conference stickers</em>
             </div>
             
         </main>
