--- a/examples/hw1/statistics.html
+++ b/examples/hw1/statistics.html
@@ -1,24 +1,147 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8" />
         <title>Women in Compuer Science</title>
         <link href="css/styles.css" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display|Roboto" rel="stylesheet">    </head>
+        <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display%7CRoboto" rel="stylesheet">    </head>
     <body>
         <nav>
             <a href="index.html">Home</a>
             <a href="history.html">History</a>
-            <a href="statistics.html">Gender Gap</a>
+            <a class="active" href="statistics.html">Gender Gap</a>
             <a href="figures.html">Pioneers</a>
-             <hr width="50%" />
+             <hr />
         </nav>
         <br />
         <div id="content">
-            <ul>Highschool: Boys outnumber girls 4:1 in computer science exams</ul>
-            <ul>Future growth: Projected growth of female CS is 15-20% between 2012 and 2022</ul>
-            <ul>Reason for disconnect: Girls receive negative message about their ability to succeed in tech organizations.</ul>
-            <ul></ul>
+            <div id="table">
+              <div id="table-title">
+                <a href="https://www.ncwit.org/sites/default/files/resources/womenintech_facts_fullreport_05132016.pdf">Women In Tech: The Facts</a>
+              </div>
+                <table class="tg">
+                  <tr id="table-header">
+                    <th class="tg-0pky">Job Title</th>
+                    <th class="tg-0pky">Black/<br>African American Women</th>
+                    <th class="tg-0pky">Latina/<br>Hispanic Women</th>
+                    <th class="tg-0lax">Asian Women</th>
+                    <th class="tg-0lax">White Women</th>
+                    <th class="tg-0lax">Women Total</th>
+                  </tr>
+                  <tr class="table-row">
+                    <td class="tg-0pky">Computer &amp; Information<br>Research Scientists</td>
+                    <td class="tg-c3ow">-</td>
+                    <td class="tg-c3ow">-</td>
+                    <td class="tg-baqh">8%</td>
+                    <td class="tg-baqh">13%</td>
+                    <td class="tg-baqh">19%</td>
+                  </tr>
+                  <tr class="table-row"> 
+                    <td class="tg-0pky">Computer &amp; Information<br>Systems Managers</td>
+                    <td class="tg-c3ow">2%</td>
+                    <td class="tg-c3ow">1%</td>
+                    <td class="tg-baqh">4%</td>
+                    <td class="tg-baqh">20%</td>
+                    <td class="tg-baqh">27%</td>
+                  </tr>
+                  <tr class="table-row">
+                    <td class="tg-0pky">Computer Systems Analysts</td>
+                    <td class="tg-c3ow">5%</td>
+                    <td class="tg-c3ow">2%</td>
+                    <td class="tg-baqh">8%</td>
+                    <td class="tg-baqh">21%</td>
+                    <td class="tg-baqh">34%</td>
+                  </tr>
+                  <tr class="table-row">
+                    <td class="tg-0pky">Information Security Analysts</td>
+                    <td class="tg-c3ow">3%</td>
+                    <td class="tg-c3ow">-</td>
+                    <td class="tg-baqh">0%</td>
+                    <td class="tg-baqh">14%</td>
+                    <td class="tg-baqh">20%</td>
+                  </tr>
+                  <tr class="table-row">
+                    <td class="tg-0pky">Computer Hardware Engineers</td>
+                    <td class="tg-c3ow">1%</td>
+                    <td class="tg-c3ow">3%</td>
+                    <td class="tg-baqh">4%</td>
+                    <td class="tg-baqh">7%</td>
+                    <td class="tg-baqh">13%</td>
+                  </tr>
+                  <tr class="table-row">
+                    <td class="tg-0pky">Computer Programmers</td>
+                    <td class="tg-c3ow">2%</td>
+                    <td class="tg-c3ow">1%</td>
+                    <td class="tg-baqh">5%</td>
+                    <td class="tg-baqh">13%</td>
+                    <td class="tg-baqh">21%</td>
+                  </tr>
+                  <tr class="table-row">
+                    <td class="tg-0lax">Software Developers</td>
+                    <td class="tg-baqh">1%</td>
+                    <td class="tg-baqh">1%</td>
+                    <td class="tg-baqh">7%</td>
+                    <td class="tg-baqh">9%</td>
+                    <td class="tg-baqh">18%</td>
+                  </tr>
+                  <tr class="table-row">
+                    <td class="tg-0lax">Web Developers</td>
+                    <td class="tg-baqh">4%</td>
+                    <td class="tg-baqh">1%</td>
+                    <td class="tg-baqh">4%</td>
+                    <td class="tg-baqh">25%</td>
+                    <td class="tg-baqh">34%</td>
+                  </tr>
+                  <tr class="table-row">
+                    <td class="tg-0lax">Computer Support Specialists</td>
+                    <td class="tg-baqh">4%</td>
+                    <td class="tg-baqh">2%</td>
+                    <td class="tg-baqh">2%</td>
+                    <td class="tg-baqh">19%</td>
+                    <td class="tg-baqh">26%</td>
+                  </tr>
+                  <tr class="table-row">
+                    <td class="tg-0lax">Database Administrators</td>
+                    <td class="tg-baqh">2%</td>
+                    <td class="tg-baqh">1%</td>
+                    <td class="tg-baqh">4%</td>
+                    <td class="tg-baqh">29%</td>
+                    <td class="tg-baqh">38%</td>
+                  </tr>
+                  <tr class="table-row">
+                    <td class="tg-0lax">Network &amp; Computer<br>Systems Administrators</td>
+                    <td class="tg-baqh">2%</td>
+                    <td class="tg-baqh">1%</td>
+                    <td class="tg-baqh">1%</td>
+                    <td class="tg-baqh">13%</td>
+                    <td class="tg-baqh">16%</td>
+                  </tr>
+                  <tr class="table-row">
+                    <td class="tg-0lax">Computer Network Architects</td>
+                    <td class="tg-baqh">4%</td>
+                    <td class="tg-baqh">2%</td>
+                    <td class="tg-baqh">1%</td>
+                    <td class="tg-baqh">8%</td>
+                    <td class="tg-baqh">12%</td>
+                  </tr>
+                  <tr class="table-row">
+                    <td class="tg-0lax">Operations Research Analysts</td>
+                    <td class="tg-baqh">10%</td>
+                    <td class="tg-baqh">5%</td>
+                    <td class="tg-baqh">2%</td>
+                    <td class="tg-baqh">37%</td>
+                    <td class="tg-baqh">51%</td>
+                  </tr>
+                </table>
+                <div class="dropdown-content">
+                    <p>This graph is based on statistics in 2015</p>
+                </div>
+            </div>
+            <ul id="list">
+                <li>Highschool: Boys outnumber girls 4:1 in computer science exams</li>
+                <li>Future growth: Projected growth of female CS is 15-20% between 2012 and 2022</li>
+                <li>Reason for disconnect: Girls receive negative message about their ability to succeed in tech organizations.</li>
+            </ul>
             
             <div id="reference">
                 <p>You can find the link to references: </p>
