Created Disney personality quiz

--- a/Labs/Quiz/index.html
+++ b/Labs/Quiz/index.html
@@ -14,7 +14,7 @@
         </div>
         
         <div id="content">
-            <p>Select 2~11 range for multiplication (eg. 9x9)</p>
+            <p>First, Select 2~11 range for multiplication (eg. 9x9)</p>
             <form>
                 <input type="range" name="rangeInput" value ="2" min="2" max="10" onchange="updateTextInput(this.value);">
                 <input type="text" id="textInput" value="2">
