--- a/Examples/EarthQuakes/open_weather_map.html
+++ b/Examples/EarthQuakes/open_weather_map.html
@@ -1,9 +1,66 @@
-<!DOCTYPE html>
 <html>
-    <head>
-        <title> </title>
-    </head>
-    <body>
 
-    </body>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Earthquake Web API</title>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+</head>
+
+<body id="dummybodyid">
+    <header>
+        <h1>Earthquake Info</h1>
+    </header>
+
+    <form method="post">
+        <div><label>Start Time:</label><input type="date" id="starttime" name="weather-start" value="2018-12-01" min="2018-12-01" max="2018-12-31"></div>
+        <div><label>Area:</label><input type="button" id="area" name="weather-area" value="London"></div>
+        
+    </form>
+
+    <div>
+        Change any value to update results.
+    </div>
+
+    <div id="weatherResult"></div>
+
+    <script>
+        $("input").click(getWeather);
+
+        function getWeather() {
+            var dateData;
+                var dataEnd = $('[name="weather-start"]').val();
+                var dateMilli = (new Date(dataEnd)).getTime();
+                dateData = Math.floor(dateMilli / 1000);
+                console.log(dateData);
+           
+            console.log(dateData)
+            var area = $('[name="weather-area"]').val();
+            var op = "PA0";
+            var key = "682ccbca86549e2ecb326609fdfa2851";
+            var z = 100, x = 100, y =2;
+            $.ajax({
+                type: "get",
+                 url: `http://api.openweathermap.org/data/2.5/weather`,
+                // url: ` http://api.openweathermap.org/data/2.5/weather/${op}/${z}/${x}/${y}`,
+                dataType: "json",
+                data: {
+                    "q": area,
+                     "appid": key
+                },
+                success: function(data, status) {
+                    console.log(arguments);
+                    var data = arguments[0];
+                    $('#weatherResult').html(data["metadata"].title + "<br>");
+                    for (var i = 0; i < data['features'].length; i++) {
+                        $('#weatherResult').append(data['features'][i]['properties']["mag"] + " - " + data['features'][i]['properties'].place + "<br/>");
+                    }
+                },
+                complete: function(data, status) { //optional, used for debugging purposes
+                    console.log(status);
+                }
+            });
+        }
+    </script>
+</body>
+
 </html>
