--- a/Labs/lab4/index.html
+++ b/Labs/lab4/index.html
@@ -57,7 +57,6 @@
             }
             else {
                 $("#passV").css("color", "red");
-
                 $("#passV").show();
             }
         });
@@ -70,7 +69,7 @@
                     "zip": $("#zip1").val()
                 },
                 success: function() {
-                    console.log(arguments);
+                    // console.log(arguments);
                     var data = arguments[0];
                     
                     $("#found").hide();
@@ -101,7 +100,7 @@
                     "state": $("#state1").val()
                 },
                 success: function(data, status) {
-                    console.log(arguments);
+                    // console.log(arguments);
 
                     var data = arguments[0];
                     $("#cSelect").empty();
