zipcode validation working

--- a/Assignments/hw2/result.html
+++ b/Assignments/hw2/result.html
@@ -48,7 +48,7 @@
                   return "moana";
               } else if(icecream=="mochi") {
                   return "mulan";
-              } else if(icecream=="elsa") {
+              } else if(icecream=="milk") {
                   return "elsa";
               }
               
