--- a/Examples/intro_PHP/ajax_php/index.html
+++ b/Examples/intro_PHP/ajax_php/index.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title> </title>
-    </head>
-    <body>
+
+<head>
+    <title> </title>
+</head>
+
+<body>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script>
         console.log("in script")
         $(document).ready(function(e) {
-             console.log("on ready")
+            console.log("on ready")
             $.ajax({
                 type: "get",
-                url: "/examples/php/api.php",
+                url: "/Examples/intro_PHP/ajax_php/api.php",
                 dataType: "json",
                 data: {
                     "something": "else"
                 },
                 success: function(data) {
+       
                     console.log(data);
                 },
                 error: function(err) {
-                    console.log(arguments);  
+                    console.log(arguments);
                 },
                 complete: function(data, status) { //optional, used for debugging purposes
                     console.log("done");
                 }
             });
         });
-
-        
     </script>
 
-    </body>
+</body>
+
 </html>
