--- a/Labs/lab7/login.html
+++ b/Labs/lab7/login.html
@@ -12,13 +12,12 @@
 
     <!-- Icons -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/simple-line-icons.css" rel="stylesheet">
-
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    
     <!-- Main styles for this application -->
-    <link href="css/style.min.css" rel="stylesheet">
+    <!--<link href="css/style.min.css" rel="stylesheet">-->
 
-    <!-- Styles required by this views -->
     <style>
         html,
         body,
