--- a/Practice/p10/poll.html
+++ b/Practice/p10/poll.html
@@ -85,7 +85,7 @@
                         console.log("Strongly Disagree value: -> ", data[0]['option1']);
                         
                         // displayPollChart(0, 10, 20, 30, 40);
-                        // displayPollChart(parseInt("data[0]['option1']"), parseInt("data[0]['option2']"), parseInt("data[0]['option3']"), parseInt("data[0]['option4']"), parseInt("data[0]['option5']"));
+                        displayPollChart(parseInt(data[0]['option1']), parseInt(data[0]['option2']), parseInt(data[0]['option3']), parseInt(data[0]['option4']), parseInt(data[0]['option5']));
 
                     },
                     error: function(error) {
