--- a/Labs/lab7/auth/login.html
+++ b/Labs/lab7/auth/login.html
@@ -80,7 +80,7 @@
                 success: function(data, status) {
                     console.log(data);
                     if (data.isAuthenticated) {
-                        window.location = "index.php"
+                        window.location = "../index.php"
                     } else {
                         $("#message").html("Bad username or password");
                         $("#message").removeClass("open-hidden");
